# vericonomy-sdk

./: Cargo.toml  README.md
docs/: hd-path-policy.md  wallet-dat-migration.md
scripts/: build-ios-ffi.sh  generate-coin-profiles.ps1  generate-swift-bindings.ps1
vericonomy-chain/: Cargo.toml
vericonomy-chain-params/: Cargo.toml
vericonomy-chain-params/src/: lib.rs
vericonomy-chain/src/: full_node.rs  history_rows.rs  lib.rs  tx_hex.rs  types.rs
vericonomy-chain/src/electrum/: conformance.rs  connection.rs  history.rs  indexing.rs  manager.rs  mod.rs  multi_server.rs  protocol.rs  scripthash.rs  throttle.rs
vericonomy-cli/: Cargo.toml
vericonomy-cli/src/: main.rs
vericonomy-errors/: Cargo.toml
vericonomy-errors/src/: lib.rs
vericonomy-ffi/: Cargo.toml  uniffi.toml
vericonomy-ffi/src/: lib.rs
vericonomy-hd/: Cargo.toml
vericonomy-hd/src/: lib.rs
vericonomy-storage/: Cargo.toml
vericonomy-storage-file/: Cargo.toml
vericonomy-storage-file/src/: lib.rs
vericonomy-storage-ios/: Cargo.toml
vericonomy-storage-ios/src/: lib.rs
vericonomy-storage-sqlite/: Cargo.toml
vericonomy-storage-sqlite/src/: lib.rs
vericonomy-storage/src/: crypto.rs  lib.rs  light_keystore.rs  traits.rs  types.rs
vericonomy-tx/: Cargo.toml
vericonomy-tx/src/: lib.rs
vericonomy-tx/tests/: golden_vectors.rs
vericonomy-wallet-core/: Cargo.toml
vericonomy-wallet-core/src/: error.rs  lib.rs  recovery.rs
vericonomy-wallet-engine/: Cargo.toml
vericonomy-wallet-engine/src/: address.rs  lib.rs  mode.rs  signer.rs  utxo_selector.rs
vericonomy-wallet-facade/: Cargo.toml
vericonomy-wallet-facade/src/: balance.rs  explorer_history.rs  gap_scan.rs  history.rs  lib.rs  send.rs  session.rs  sync_engine.rs  utxo_prep.rs  verify.rs  wallet.rs  wallet_cache.rs
