[package]
name = "vericonomy-storage-file"
description = "Filesystem-backed keystore persistence for Vericonomy light wallets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vericonomy_storage_file"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
vericonomy-errors.workspace = true
vericonomy-storage.workspace = true
